tests/compound_literal_equals_bad.sl
struct Vec2 {
	x i32
	y i32
}

fn main() {
	var v Vec2 = { x = 1, y: 2 }
	_ = v
}
